fix: faulty export from peerjs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,10 @@
     }
   ],
   "angularCompilerOptions": {
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictInjectionParameters": true
   },
   "compilerOptions": {
-    "esModuleInterop": true
+    "allowSyntheticDefaultImports":true,
   }
 }
